--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,13 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".activity.TieuThuyetActivity"></activity>
-        <activity android:name=".activity.TruyenActivity"
+        <activity android:name=".activity.GioHangActivity"></activity>
+        <activity
+            android:name=".activity.ChiTietActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.TieuThuyetActivity" />
+        <activity
+            android:name=".activity.TruyenActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.MainActivity"
