--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+    // bradge
+    implementation 'com.nex3z:notification-badge:1.0.4'
 
 }
