--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
     // bradge
     implementation 'com.nex3z:notification-badge:1.0.4'
-
+    // even bus
+    implementation 'org.greenrobot:eventbus:3.2.0'
 }
