--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation 'com.nex3z:notification-badge:1.0.4'
     // even bus
     implementation 'org.greenrobot:eventbus:3.2.0'
+    // paper
+    implementation 'io.github.pilgr:paperdb:2.7.1'
 }
