--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
     // paper
     implementation 'io.github.pilgr:paperdb:2.7.1'
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
