--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,8 @@ dependencies {
     implementation 'io.github.pilgr:paperdb:2.7.1'
     //Gson
     implementation 'com.google.code.gson:gson:2.8.9'
+    //ytb
+    //implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.0.0'
+
+
 }
